--- a/c.html
+++ b/c.html
@@ -5,5 +5,8 @@
   </head>
   <body>
       your ip {{ name }}
+       {% for i in name1 %}
+         <li><a href="{{ i[i] }}">{{ i }}</a></li>
+       {% endfor %}
   </body>
 </html>
